syntax = "proto3";
package chain4energy.c4echain.cfevesting;

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/chain4energy/c4echain/x/cfevesting/types";

message VestingTypes {
  repeated VestingType vesting_types = 1;
}

message VestingType {
  // vesting type name
  string name = 1; 
  // period of locked coins (minutes) from vesting start
  google.protobuf.Duration lockup_period = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  // period of vesting coins (minutes) from lockup period end
  google.protobuf.Duration vesting_period = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  // the percentage of tokens that are released initially
  string free = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
